# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-lint.yml  python-app.yml
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  games.py
